--- a/index.html
+++ b/index.html
@@ -2,33 +2,40 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+
+  <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
   
   <title>Frontend Mentor | Blog preview card</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
-  Learning
 
-  Published 21 Dec 2023
+  <section class="container">
+    <img class="design" src="/assets/images/illustration-article.svg" alt="cool-design">
+    
+    <h2>Learning</h2>
 
-  HTML & CSS foundations
+    <p>Published 21 Dec 2023</p>
+  
+    <h1>HTML & CSS foundations</h1>
+  
+    <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
 
-  These languages are the backbone of every website, defining structure, content, and presentation.
-
-  Greg Hooper
+  
+    <div class="footer"><p><img class="avatar" src="/assets/images/image-avatar.webp" alt=""> <strong>Greg Hooper</strong></p></div>
+    
+  </section>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://linkedin.com/in/anthony-chaiditya/">Anthony Chaiditya</a>.
   </div>
 </body>
 </html>
